--- a/templates/base.html
+++ b/templates/base.html
@@ -1,37 +1,90 @@
 <!DOCTYPE html>
-<html>
+<html lang="uk-UA">
 <head>
-	<meta charset="utf-8">
+	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-	<link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
-	<title>{% block title %}{%endblock %}</title>
+	<title>{% block title %}{% endblock %}</title>
+	<meta name="description" content="Комунальний заклад 'Татарбунарський будинок дитячої та юнацької творчості'">
+	<meta name="keywords" content="Комунальний заклад 'Татарбунарський будинок дитячої та юнацької творчості' Татарбунарської міської ради Одеської області">
+	<!-- Favicon -->
+	<link rel="icon" href="{{url_for('static', filename='img/БДЮТ кол.png')}}" type="image/x-icon">
+ 	<link rel="shortcut icon" href="{{url_for('static', filename='img/low.png')}}" type="image/x-icon">
+	<!-- OG Tags -->
+	<meta property="og:title" content="БДЮТ">
+	<meta property="og:description" content="Комунальний заклад БДЮТ">
+	<meta property="og:type" content="article">
+	<meta property="og:image" content="https://вставить ссылку на картинку из хостинга">
+	<meta property="og:site_name" content="Татарбунарський будинок дитячої та юнацької творчості">
+	<!-- Bootstrap -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<!-- font-family: 'Roboto', sans-serif; -->
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900" rel="stylesheet">
+	<!-- Font Awesome -->
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.6.0/css/fontawesome.min.css" integrity="sha384-NvKbDTEnL+A8F/AA5Tc5kmMLSJHUO868P+lDtTpJIeQdGYaUIuLr4lVGOEA1OcMy" crossorigin="anonymous">
+	<link rel="stylesheet" href="{{url_for('static', filename='css/font-awesome.min.css')}}">
+	<!-- Слайдер -->
+	<link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/slick.css')}}">
+	<link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/slick-theme.css')}}">
+
+	<!-- Pop-up window css -->
+	<link rel="stylesheet" href="{{url_for('static', filename='css/jquery.arcticmodal-0.3.css')}}">
+	<!-- CSS Styles -->
+	<link rel="stylesheet" href="{{url_for('static', filename='css/main.css')}}">
+	<link rel="stylesheet" href="{{url_for('static', filename='css/media.css')}}">
 </head>
+
 <body>
-	<header class="p-3 text-bg-dark">
+	{% block content %}{%endblock %}
+	  
+	  <footer class="footer" id="footer">
 		<div class="container">
-		  <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-			<a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-			  <img class="header__img" src="{{ url_for('static', filename='img/low.png')}}" alt="878">
-			</a>
-	
-			<ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-			  <li><a href="{{ url_for('index') }}" class="nav-link px-2 text-secondary"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Главная</font></font></a></li>
-			  <li><a href="{{ url_for('about') }}" class="nav-link px-2 text-white"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">О нас</font></font></a></li>
-			</ul>
-	
-			<form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-			  <input type="search" class="form-control form-control-dark text-bg-dark" placeholder="пошук..." aria-label="Пошук">
-			</form>
-	
-			<div class="text-end">
-			  <button type="button" class="btn btn-outline-light me-2"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Войти</font></font></button>
-			  <button type="button" class="btn btn-warning"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Зарегистрироваться</font></font></button>
+			<div class="row">
+				<div class=" col-f col-12">
+					<div class="copyright d-flex justify-content-between">
+						<a href=""><i class="fa fa-phone-volume"></i>+38 (097) 77-77-777</a>
+						<ul class="d-flex icon-soc">
+							<li>
+								<a href="" class="social-icon">
+									<img src="{{url_for('static', filename='img/inst.png')}}" alt="Instagram">
+								</a>
+							</li>
+							<li>
+								<a href="" class="social-icon">
+									<img src="{{url_for('static', filename='img/yutub.png')}}" alt="yutub">
+								</a>
+							</li>
+							<li>
+								<a href="" class="social-icon">
+									<img src="{{url_for('static', filename='img/fb.png')}}" alt="Facebook">
+								</a>
+							</li>
+							<li>
+								<a href="" class="social-icon">
+									<img src="{{url_for('static', filename='img/telega.png')}}" alt="Telega">
+								</a>
+							</li>
+						</ul>
+						<a class="mail-link" href=""><i class="fa fa-envelope"></i>tatbdt@gmail.com</a>
+					</div>
+				</div>
 			</div>
-		  </div>
 		</div>
-	  </header>
-	  {% block body %}{%endblock %}
+	</footer>
+	  
+	{% block ModalWindows %}{%endblock %}
+	<!-- JQuery -->
+	<script src="{{url_for('static', filename='js/jquery-3.3.1.min.js')}}"></script>
+	<!-- slick -->
+	<script type="text/javascript" src="{{url_for('static', filename='js/slick.min.js')}}"></script>
+	<!-- Parallax -->
+	<script type="text/javascript" src="{{url_for('static', filename='js/parallax-bg.js')}}"></script>
+	<!-- Pop-up window js -->
+	<script src="{{url_for('static', filename='js/jquery.arcticmodal-0.3.min.js')}}"></script>
+	<!-- Validate -->
+	<script type="text/javascript" src="{{url_for('static', filename='js/jquery.validate.js')}}"></script>
+	<!-- Main JS -->
+	<script src="{{url_for('static', filename='js/main.js')}}"></script>
 </body>
 </html>
 
